--- a/Codenames.html
+++ b/Codenames.html
@@ -14,9 +14,9 @@
     <div class="controls">
         <button id="start" class="comic-button" onclick="initializeGame()">New Game</button>
         <button id="reset" class="comic-button" onclick="resetGame()">Clear Board</button>
-        <button id="reset" class="comic-button" onclick="cluewriter()">Spymaster</button>
+        <button id="spymasterButton" class="comic-button" onclick="toggleSpymasterView()">Spymaster</button>
     </div>
-
+    
     <div class="container">
         <div class="left-panel">
             <div class="team_card">
