--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="navbar">
+        <a class="nav-link" href="#introduction">Introduction</a>
+        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link">FAQ</a>
+        <a class="nav-link">Other Games</a>
+    </div>
     <div class="play">
         <div class="d1"> 
             <img src="logo.png"/>
@@ -20,5 +26,106 @@
         <br>
         <a role="button" class="room" href="Codenames.html">CREATE ROOM</a>
     </div>
+    <div class="introduction_yt">
+        <p style="font-size:  50px;"><b style="color: white;">CODENAMES</b>  <b style="color: rgb(243, 189, 12);">APP</b></p>
+        <b style="font-size:  50px;color: white;">The best-selling board game on</b><br><b style="font-size:  50px;color: white;">your phone!</b>
+        <br>
+        <iframe width="900" height="500" 
+        src="https://www.youtube.com/embed/xKYrSvTuI7I" 
+        allowfullscreen style="border-radius: 5%;">
+        </iframe>
+        <b style="font-size:  50px;color: white;">Join Now</b>
+        <br>
+        <div>
+            <a class="button" href="https://apps.apple.com/us/app/codenames/id1055650930" target="_blank">Appstore</a>
+            <a class="button" href="https://play.google.com/store/apps/details?id=com.czechgames.codenamesdigital&pli=1" target="_blank">Playstore</a>
+        </div>
+        <br>
+        <br>
+        <br>
+    </div>
+    <br>
+    <div class="introduction" id="introduction">
+        <p style="font-size:x-large;color: white;"><b>LET YOUR IMAGINATION RUN WILD</b></p>
+        <p style="font-size:large;color:white;"><b>Be creative with word associate</b></p>
+        <div class="container">
+            <div class="box">
+                <img src="ch1.png" style="height: 200px;width: 200px;padding-left: 100px; padding-top: 50px;"/>
+            </div>
+            <div class="box" style="padding-top:50px;font-size: large; font-weight: bold;color: white;width: 500px;">
+                <b style="color: rgb(243, 189, 12);">Two rival spymasters know the secret identities of 25 agents</b><br>
+                . Their teammates know the agents only by their codenames.<br> To win the game, your team will need to<br>
+                <b style="color: rgb(243, 189, 12);"> contact all of your agents</b>
+                in the field before the other team finds their own agents. And<br>
+                <b style="color: rgb(243, 189, 12);">watch out for the assassin</b><br>
+                -meet him in the field and your team is done!</div>
+            <div class="box">
+                <img src="ch2.png" style="height: 200px;width: 200px;padding-top: 50px;"/>
+            </div>
+        </div>
+    </div>
+
+    <div class="About" id="about">
+        <div class="box">
+            <p><b style="font-size: xx-large;font-weight: bold;">It’s Codenames you know and love, but with much more</b></p>
+            Enrich your gameplay with <b style="color: rgb(243, 189, 12);">nifty upgrades, exclusive rewards, new game</b><br>
+            <b style="color: rgb(243, 189, 12);">modes, thematic word collections, exciting missions</b>, and unlock <b style="color: rgb(243, 189, 12);">comics</b> for<br>
+            an even better Codenames experience – all in one app!
+            <br>
+        </div>
+        <img src="aboutbg_1.png"/>
+    </div>
+    <div class="About" style="background-image: url(introbg.png);">
+        <div class="box" style="width: max-content;">
+            <b style="font-size: xx-large;font-weight: bold;">PLAY ANYTIME, ANYWHERE!</b><br>
+            Multiplayer game designed for solo players<br>
+            Our mission is to deliver the <b style="color: rgb(243, 189, 12);">best game experience possible.</b> We've leveraged<br>
+            our experience from our previous digital implementations of <b style="color: rgb(243, 189, 12);">Galaxy Trucker</b><br>
+            and <b style="color: rgb(243, 189, 12);">Through the Ages</b>(both rated 4.9 stars on average) and created a robust<br>
+            matchmaking system that allows you to <b style="color: rgb(243, 189, 12);">play multiple games simultaneously</b><br>
+            <b style="color: rgb(243, 189, 12);">with asynchronous gameplay</b>!<br>
+    
+            <p>Compete with fellow solo agents, or just play with your friends and enjoy the</p>
+            <p>brand new features and modes. Not in the mood for teamwork? <b style="color: rgb(243, 189, 12);">Solve daily</b></p>
+            <p><b style="color: rgb(243, 189, 12);">challenges</b> and practice your spy skills.</p>
+        </div>
+        <img src="about_photo.png"/>
+    </div>
+    <div class="About" style="background-image: url(introytbg.png);">
+        <div class="box" style="width: max-content;">
+            <p style="font-size: xx-large;font-weight: bold;">START YOUR SECRET AGENT CAREER!</p>
+            <p style="font-size: x-large;font-weight: bold;">Collect, level up, upgrade… and collect even more!</p>
+            Level up! Climb the ranks of your agency. <b style="color: rgb(243, 189, 12);">Solve Daily Challenges</b> better than<br>
+            any other spy. Progress in story mode and move to a better office. Qualify as a<br>
+            <b style="color: rgb(243, 189, 12);">rescue agent</b> or a <b style="color: rgb(243, 189, 12);">member of the honored Jury.</b>
+        </div>
+        <img src="AYC.png"/>
+    </div>
+    <div class="About"style="background-image: url(introbg.png);">
+        <div class="box" style="width: max-content;">
+            <p style="font-size: xx-large;font-weight: bold;">SHARE THE FUN WITH FRIENDS</p>
+            <p style="font-size: x-large;font-weight: bold;">Or dominate strangers through robust solo matchmaking</p>
+            Either way, don’t hesitate to <b style="color: rgb(243, 189, 12);">use your newly unlocked game modes or</b><br>
+            <b style="color: rgb(243, 189, 12);">collected words</b> in your <b style="color: rgb(243, 189, 12);">friendly games</b> with your buddies.
+        </div>
+        <img src="NTW.png"/>
+    </div>
+    <div class="About">
+        <div class="box" style="width: max-content;">
+            <p style="font-size: xx-large;font-weight: bold;">FAQ</p>
+            <p style="font-size: x-large;font-weight: bold;">What you should know about Codenames App</p>
+        </div>
+    </div>
+
+    <div class="carousel-container">
+        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+        <div class="carousel">
+            <img src="aboutbg_1.png" alt="Slide 1">
+            <img src="AYC.png" alt="Slide 2">
+            <img src="NTW.png" alt="Slide 3">
+        </div>
+        <button class="next" onclick="moveSlide(1)">&#10095;</button>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
